test/frontend/pass/comments.osl
// This comment contains invalid characters @ #
/*
    This comment also contains invalid characters
    @ #
*/
shader test() {}
