test/frontend/fail/invalid_call.osl
shader test() {
    int i;
    i(4);
}
